Fixing bug 51096 - crash after changing mousewheel prefs twice.  Also remove some assertions and fix a longstanding inconsistency/bug with mousewheel text zoom and history navigation.  r=ben.